fix regression: missing padding on admin-menu

--- a/assembl/static2/css/views/administration.scss
+++ b/assembl/static2/css/views/administration.scss
@@ -132,10 +132,9 @@
 
   .admin-menu-sticky {
     position: sticky;
-    top: 160px;
+    top: 100px;
     z-index: 99;
-    padding-left: 5px;
-    padding-right: 0;
+    padding: 15px 0 0 30px;
   }
 
   .admin-menu-container {
@@ -144,10 +143,6 @@
     max-width: 320px;
     overflow-y: auto;
     background-color: $page-bkg-grey;
-
-    .admin-menu2 {
-      padding-left: 5px;
-    }
   }
 
   .no-box-shadow {
@@ -850,17 +845,12 @@
 }
 
 @media screen and (max-width: $screen-md-min) {
-  .tabbed-content {
+  .administration {
     .admin-menu-sticky {
-      padding-left: initial;
-      padding-right: initial;
-    }
-
-    .admin-menu-container {
-      padding: 0 15px;
+      padding: 15px 0 0 15px;
 
       .admin-menu2 {
-        padding-left: 40px;
+        padding-left: 15px;
       }
     }
   }
